# VertexEngine

./: .gitignore  CMakeLists.txt
EngineSrc/: Camera2D.cpp  Camera2D.hpp  IOManager.cpp  IOManager.hpp  ImageLoader.cpp  ImageLoader.hpp  Renderable2D.cpp  Renderable2D.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture2D.cpp  Texture2D.hpp  TextureCache.cpp  TextureCache.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp
EngineSrc/Utility/: stb_image.cpp  stb_image.h
EngineSrc/glad/: glad.h
debug/: 2DEngine.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
debug/res/shaders/: basic.frag  basic.vert
release/: 2DEngine.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
src/: MainGame.cpp  MainGame.hpp  main.cpp
src/EngineSrc/: Shader.cpp  Shader.hpp  Sprite.hpp  Vertex.hpp  Window.hpp  glad.c
